crates/backyard-parser/tests/snapshots/pre__basic.snap
---
source: crates/backyard-parser/tests/pre.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: pre
    statement:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 2
            offset: 2
          end:
            line: 1
            column: 3
            offset: 3
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 2
          offset: 2
        end:
          line: 1
          column: 3
          offset: 3
      leadings: ~
      trailings: ~
    operator: ++
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 2
        offset: 2
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 4
    offset: 4
leadings: ~
trailings: ~
