crates/backyard-parser/tests/snapshots/pre__ellipsis.snap
---
source: crates/backyard-parser/tests/pre.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: variadic
    statement:
      node_type: call
      name:
        node_type: variable
        name:
          node_type: identifier
          name: a
          loc:
            start:
              line: 1
              column: 3
              offset: 3
            end:
              line: 1
              column: 4
              offset: 4
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 3
            offset: 3
          end:
            line: 1
            column: 4
            offset: 4
        leadings: []
        trailings: []
      arguments: []
      loc:
        start:
          line: 1
          column: 5
          offset: 5
        end:
          line: 1
          column: 6
          offset: 6
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 6
        offset: 6
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 7
    offset: 7
leadings: []
trailings: []
