crates/backyard-parser/tests/snapshots/pre__negate.snap
---
source: crates/backyard-parser/tests/pre.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: negate
    statement:
      node_type: variable
      name:
        node_type: identifier
        name: a
        loc:
          start:
            line: 1
            column: 1
            offset: 1
          end:
            line: 1
            column: 2
            offset: 2
        leadings: []
        trailings: []
      loc:
        start:
          line: 1
          column: 1
          offset: 1
        end:
          line: 1
          column: 2
          offset: 2
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 1
        offset: 1
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 3
    offset: 3
leadings: []
trailings: []
